--- a/Cosmo-Junkie/styles.css
+++ b/Cosmo-Junkie/styles.css
@@ -21,6 +21,7 @@ li {
 body {
     background: var(--sccondary);
     overflow-x: hidden;
+    font-family: 'Rubik Regular';
 }
 
 .button {
@@ -48,8 +49,83 @@ input,textarea {
 }
 
 /* fonts */
+@font-face {
+    font-family: 'Rubik Regular';
+    src: url('assets/fonts/Rubik-Regular.ttf');
+}
+
+h1,h2,h3,h4 {
+    color: #DDDBFF;
+    font-weight: normal;
+}
+
+p,a,li {
+    color: #9893D8;
+}
+
+h1,h3 {
+    font-size: 1.2em;
+}
+
+h2 {
+    font-size: 1.6em;
+}
+
+h4 {
+    font-size: 1.1em;
+}
+
+.leading {
+    font-size: 1.1em;
+}
+
 
 /* mobile styles */
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+}
+
+.site-nav {
+    margin: 0 20px;
+}
+
+.site-nav ul {
+    display: none;
+}
+
+.site-nav h1 {
+    grid-column: 1/4;
+    grid-row: 1;
+    padding-bottom: 10px;
+    border-bottom: 3px solid var(--primary);
+}
+
+#welcome {
+    padding: 0 20px 20px 20px;
+}
+
+.welcome-text {
+    grid-column: 1/6;
+}
+
+.welcome-img {
+    grid-column: 6/9;
+}
+
+.welcome-img img {
+    width: 200%;
+}
+
+.welcome-text a {
+    margin: 20px 0;
+}
+
+
+
+
+
 
 /* small tablet styles */
 @media screen and (min-width: 620px){
@@ -58,10 +134,17 @@ input,textarea {
 
 /* large tablet & laptop styles */
 @media screen and (min-width: 960px){
-
+    
+    body {
+        font-size: 18px;
+    }
 }
 
 /* desktop styles */
 @media screen and (min-width: 1200px){
+
+    body {
+        font-size: 20px;
+    }
 
 }
