--- a/Cosmo-Junkie/styles.css
+++ b/Cosmo-Junkie/styles.css
@@ -85,6 +85,7 @@ h4 {
 .grid {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
+    gap: 10px;
 }
 
 .site-nav {
@@ -122,6 +123,124 @@ h4 {
     margin: 20px 0;
 }
 
+#portfolio {
+    background: url(assets/square_bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    padding: 30px 20px;
+}
+
+#portfolio h3 {
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.projects a {
+    grid-column: 1/9;
+    margin: 20px 0;
+    display: flex;
+}
+
+.projects a *{
+    margin: 0 20px;
+    max-width: 40%;
+    align-self: center;
+}
+
+.projects h4 {
+    color: #9994f7;
+}
+
+#skills {
+    padding: 30px 20px;
+    background: #07083E;
+}
+
+#skills h3{
+    text-align: center;
+}
+
+#skills ul {
+    margin: 40px 0;
+}
+
+#skills li {
+    padding: 10px;
+    background: rgba(0,0,0,0.2);
+    grid-column: span 4;
+    text-align: center;
+}
+
+#skills img {
+    height: 80px;
+    margin: 10px auto;
+}
+
+#contact {
+    padding: 30px 20px;
+    background: #080936;
+}
+
+#contact h3, #contact p {
+    text-align: center;
+    margin-bottom: 0;
+}
+
+#contact form {
+    width: 80%;
+    max-width: 400px;
+    margin: 20px auto;
+    text-align: center;
+}
+
+#contact input, #contact textarea {
+    width: 100%;
+    margin: 10px auto;
+}
+
+#contact .button {
+    margin-top: 10px;
+}
+
+footer {
+    padding: 30px 20px;
+    background-color: #14153D;
+    background-image: url(assets/footer_image.png);
+    background-size: 40%;
+    background-repeat: no-repeat;
+    background-position: top center;
+
+}
+
+footer .copyright{
+    grid-column: 1/3;
+    font-size: 0.8em;
+}
+
+footer .social {
+    grid-column: 7/9;
+    display: flex;
+    justify-content: flex-end;
+    
+}
+
+footer li {
+    margin: 0 6px;
+}
+
+footer img {
+    width: 20px;
+}
+
+
+
+
+
+
+
+
+
 
 
 
@@ -137,6 +256,7 @@ h4 {
     
     body {
         font-size: 18px;
+        
     }
 }
 
