--- a/Cosmo-Junkie/styles.css
+++ b/Cosmo-Junkie/styles.css
@@ -235,20 +235,52 @@ footer img {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
 /* small tablet styles */
 @media screen and (min-width: 620px){
   
+    .welcome-text {
+        grid-column: 1/5;
+    }
+
+    .welcome-img {
+        grid-column: 5/9;
+    }
+
+    .welcome-img img {
+        width: 100%;
+    }
+
+    .projects {
+        margin-top: 40px;
+    }
+
+    .projects a {
+        grid-column: span 4;
+        display: block;
+        margin: 20px 0;
+    }
+
+    .projects a:last-child{
+        grid-column: 3/7;
+    }
+
+    .projects a * {
+        margin: 10px 20%;
+        max-width: 60%;
+
+    }
+
+    .projects h4 {
+        text-align: center;
+    }
+
+    #skills {
+        padding: 30px 100px;
+    }
+
+    footer {
+        background-size: 20%;
+    }
 }
 
 /* large tablet & laptop styles */
@@ -258,13 +290,116 @@ footer img {
         font-size: 18px;
         
     }
+
+    .grid {
+        width: 100%;
+        max-width: 1060px;
+        margin: 0 auto;
+        box-sizing: border-box;
+    }
+
+    .leading {
+        margin: 20px 0;
+    }
+
+    .site-nav {
+        padding: 0 20px;
+    }
+
+    .site-nav h1 {
+        grid-column: 1/3;
+    }
+
+    .site-nav ul {
+        display: flex;
+        grid-column: 6/9;
+        justify-content: flex-end;
+        align-self: center;
+    }
+
+    .site-nav li {
+        margin-left: 20px;
+    }
+
+    .welcome-text {
+        align-self: center;
+    }
+
+    #welcome {
+        padding-bottom: 40px;
+    }
+
+    .projects a:nth-child(1) {
+        grid-column: 2/4;
+    }
+
+    .projects a:nth-child(2) {
+        grid-column: 4/6;
+        padding-top: 140px;
+    }
+
+    .projects a:nth-child(3) {
+        grid-column: 6/8;
+    }
+
+    .projects a *{
+        max-width: 80%;
+        margin: 10px 10%;
+    }
+
+    #skills {
+        padding: 30px 20px;
+    }
+
+    #skills ul {
+        margin: 40px auto;
+    }
+
+    #skills li {
+        grid-column: span 2;
+    }
+
+    footer {
+        padding: 40px 20px;
+        background-size: 25%;
+    }
+
+
 }
+
 
 /* desktop styles */
 @media screen and (min-width: 1200px){
 
     body {
         font-size: 20px;
+    }
+
+    #welcome, #portfolio, #skills, #contact {
+        padding: 90px 0;
+    }
+
+    .projects a:nth-child(1) {
+        grid-column: 1/3;
+    }
+
+
+    .projects a:nth-child(3) {
+        grid-column: 7/9;
+    }
+
+    .projects a *{
+        max-width: 100%;
+        margin: 30px 0;
+    }
+
+    footer {
+        padding: 80px 0;
+        background-size: 30%;
+    }
+
+    footer img {
+        width: 30px;
     }
 
 }
